finished the rough outline of what the site will look like

--- a/index.html
+++ b/index.html
@@ -10,46 +10,46 @@
 <body>
     <header>
         <h1>My Portfolio</h1>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#project1">Project 1</a>
+                </li>
+                <li>
+                    <a href="#project2">Project 2</a>
+                </li>
+                <li>
+                    <a href="#project3">Project 3</a>
+                </li>
+                <li>
+                    <a href="#project4">Project 4</a>
+                </li>
+            </ul>
+        </nav>
     </header>
-<nav>
-    <ul>
-        <li>
-            <a href="#">Project 1</a>
-        </li>
-        <li>
-            <a href="#">Project 2</a>
-        </li>
-        <li>
-            <a href="#">Project 3</a>
-        </li>
-        <li>
-            <a href="#">Project 4</a>
-        </li>
-    </ul>
-</nav>
 
-<figure class="alias"></figure>
+<figure class="avatar"></figure>
     
 <main>
 <div class="projects">
-    <section class="cards">
-        <header>Project 1</header>
-        <img src="./assets/images/digital-marketing-meeting.jpg" alt="Example image from Project 1 of a digital marketing meeting"
+    <section class="cards" id="card1">
+        <header id="project1">Project 1</header>
+        <img src="./assets/images/digital-marketing-meeting.jpg" alt="Example image from Project 1 of a digital marketing meeting" />
     </section>
 
-    <section class="cards">
-        <header>Project 1</header>
-        <img src="" alt="Example image from Project 2"
+    <section class="cards" id="card2">
+        <header id="project2">Project 2</header>
+        <img src="./assets/images/elementor-placeholder-image.webp" alt="Example image from Project 2 (PLACEHOLDER)" />
     </section>
 
-    <section class="cards">
-        <header>Project 1</header>
-        <img src="" alt="Example image from Project 3"
+    <section class="cards" id="card3">
+        <header id="project3">Project 3</header>
+        <img src="./assets/images/elementor-placeholder-image.webp" alt="Example image from Project 3 (PLACEHOLDER)" />
     </section>
 
-    <section class="cards">
-        <header>Project 1</header>
-        <img src="" alt="Example image from Project 4"
+    <section class="cards" id="card4">
+        <header id="project4">Project 4</header>
+        <img src="./assets/images/elementor-placeholder-image.webp" alt="Example image from Project 4 (PLACEHOLDER)" />
     </section>
 </div>
 </main>
