fixed image sizing on smaller screens and added transition effects

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>My Portfolio</h1>
+        <h1>Sam Barsuhn</h1>
         <nav>
             <ul>
                 <li>
@@ -32,10 +32,13 @@
     
 <main>
     <div class="projects">
-    <section class="cards" id="card1">
-        <header id="project1">Project 1</header>
-        <img src="./assets/images/digital-marketing-meeting.jpg" alt="Example image from Project 1 of a digital marketing meeting" />
-    </section>
+        <a target="_blank" href="https://sbarsuhn.github.io/Horiseon-Week-1-Project/">
+            <section class="cards" id="card1">
+                <header id="project1">Project 1</header>
+                <a target="_blank" href="https://sbarsuhn.github.io/Horiseon-Week-1-Project/"><img src="./assets/images/3dgifmaker37526.gif" alt="Example image from Project 1" />
+            </section>
+        </a>
+
 
     <section class="cards" id="card2">
         <header id="project2">Project 2</header>
@@ -51,7 +54,7 @@
         <header id="project4">Project 4</header>
         <img src="./assets/images/elementor-placeholder-image.webp" alt="Example image from Project 4 (PLACEHOLDER)" />
     </section>
-</div>
+    </div>
 </main>
 </body>
 </html>
