added project 1 info

--- a/index.html
+++ b/index.html
@@ -55,13 +55,16 @@
             </section>
         </a>
 
-
-    <section class="cards" id="card2">
-        <header id="project2">
-            <h3>Project 2</h3>
-        </header>
-        <img src="./assets/images/elementor-placeholder-image.webp" alt="Example image from Project 2 (PLACEHOLDER)" />
-    </section>
+        <a target="_blank" href="https://sbarsuhn.github.io/Project-1/">
+            <section class="cards" id="card1">
+                <header id="project2">
+                    <h3>Project 1: Horiseon</h3>
+                </header>
+                <a target="_blank" href="https://sbarsuhn.github.io/Project-1/"><img src="./assets/images/project-1 SS.png" alt="Example image from group Project 1" />
+                  <div class="pdesc">(project description) Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus minima, doloribus, amet aperiam harum cum rem beatae repellat culpa, labore asperiores? Dolorum accusantium, commodi dicta voluptate velit omnis animi quos!
+                  Odio soluta sed exercitationem officia deleniti magni quibusdam eaque eveniet non qui, accusamus doloribus libero repudiandae architecto rerum nesciunt dolorum vel iste corrupti totam odit debitis laboriosam. Cupiditate, quas itaque?</div>  
+            </section>
+        </a>
 
     <section class="cards" id="card3">
         <header id="project3">
